# control_baxter

simRobot_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
simRobot_msgs/msg/: sim_bimanArm.msg  sim_robot.msg  sim_robot.msg~  sim_singleArm.msg  sim_singleArmTransport.msg  sim_singleArmTransport.msg~
simRobot_msgs/srv/: simulateRobotSRV.srv
